WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
255365
[UI-side compositing] Hang after dragging scrollbar with scrolling performance testing on
https://bugs.webkit.org/show_bug.cgi?id=255365
Summary
[UI-side compositing] Hang after dragging scrollbar with scrolling performanc...
Nikos Mouchtaris
Reported
2023-04-12 14:11:34 PDT
[UI-side compositing] Hang after dragging scrollbar with scrolling performance testing on
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2023-04-12 14:13:03 PDT
<
rdar://problem/107445370
>
Nikos Mouchtaris
Comment 2
2023-04-12 14:17:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12668
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug